--- a/META.yml
+++ b/META.yml
@@ -9,6 +9,7 @@ no_index:
     - inc
     - t
 requires: 
+  Class::Multimethods::Pure: 0.11
   Data::Bind: 0.26
   Test::Exception: 0
-version: 0.001_1
+version: 0.001_2
