--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,12 @@
+--- 
 abstract: Data::Bind-based multi-sub dispatch
 author: Chia-liang Kao <clkao@clkao.org>
 distribution_type: module
-generated_by: Module::Install version 0.63
+generated_by: Module::Install version 0.67
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Sub-Multi
 no_index: 
   directory: 
@@ -12,4 +16,5 @@ requires:
   Class::Multimethods::Pure: 0.11
   Data::Bind: 0.26
   Test::Exception: 0
-version: 0.002
+  perl: 5.8.0
+version: 0.003
